# molecule_aligner

./: ADVANCED_USAGE_GUIDE.md  COPILOT.md  GUIDE.md  IMPLEMENTATION_PLAN_FINAL.md  README.md  UNIFIED_API_PROPOSAL.md  UPDATED_PLAN_WITH_IDPP.md  adaptive_idpp_trajectory.extxyz  adaptive_idpp_trajectory.traj  demo_build_reaction_pathway.py  example_usage.ipynb  full_path.extxyz  idpp.traj  pyproject.toml  test_build_reaction_pathway.py  user_requested_pathway.extxyz
images/: 1.xyz  2.xyz  3.xyz  34a.traj  3_4_b.traj  4.xyz  5.xyz  6.xyz  7.xyz  76d.traj  7_6_d.traj  8.xyz  a.xyz  b.xyz  c.xyz  d.xyz  e.xyz  pre_d.xyz
molecule_aligner/: __init__.py  align.py  interpolate.py  pathway.py  utils.py
molecule_aligner.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
